// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders all sizes 1`] = `
.emotion-0 {
  padding-bottom: 4px;
}

.emotion-1 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

.emotion-2 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 12px;
  width: 100%;
  -webkit-animation: animation-8il3bs 0.6s linear infinite;
  animation: animation-8il3bs 0.6s linear infinite;
  background-image: linear-gradient( 45deg, transparent 25%, rgba(0,0,0,0.1) 25%, rgba(0,0,0,0.1) 50%, transparent 50%, transparent 75%, rgba(0,0,0,0.1) 75%, rgba(0,0,0,0.1) 100% );
  background-size: 12px 12px;
}

<Fragment>
  <div
    className="emotion-0"
    data-cy="progressBar-text"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </div>
  <svg
    className="emotion-2"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-1"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders all sizes 2`] = `
.emotion-0 {
  padding-bottom: 4px;
}

.emotion-1 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

.emotion-2 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
  -webkit-animation: animation-8il3bs 0.6s linear infinite;
  animation: animation-8il3bs 0.6s linear infinite;
  background-image: linear-gradient( 45deg, transparent 25%, rgba(0,0,0,0.1) 25%, rgba(0,0,0,0.1) 50%, transparent 50%, transparent 75%, rgba(0,0,0,0.1) 75%, rgba(0,0,0,0.1) 100% );
  background-size: 12px 12px;
}

<Fragment>
  <div
    className="emotion-0"
    data-cy="progressBar-text"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </div>
  <svg
    className="emotion-2"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-1"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders isProcessing 1`] = `
.emotion-0 {
  padding-bottom: 4px;
}

.emotion-1 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

.emotion-2 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
  -webkit-animation: animation-8il3bs 0.6s linear infinite;
  animation: animation-8il3bs 0.6s linear infinite;
  background-image: linear-gradient( 45deg, transparent 25%, rgba(0,0,0,0.1) 25%, rgba(0,0,0,0.1) 50%, transparent 50%, transparent 75%, rgba(0,0,0,0.1) 75%, rgba(0,0,0,0.1) 100% );
  background-size: 12px 12px;
}

<Fragment>
  <div
    className="emotion-0"
    data-cy="progressBar-text"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </div>
  <svg
    className="emotion-2"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-1"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders with caption text and value text 1`] = `
.emotion-2 {
  padding-bottom: 4px;
}

.emotion-4 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-3 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

.emotion-0 {
  color: var(--themeTextColorSecondary,#76797E);
  fill: var(--themeTextColorSecondary,#76797E);
  font-size: 12px;
}

.inverseColorMode .emotion-0,
.emotion-0.inverseColorMode {
  color: var(--themeTextColorSecondaryInverted,#AEB0B4);
  fill: var(--themeTextColorSecondaryInverted,#AEB0B4);
}

.emotion-1 {
  font-weight: 500;
}

<Fragment>
  <div
    className="emotion-2"
    data-cy="progressBar-text"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    >
      <FlexItem
        flex="grow"
      >
        <span
          className="emotion-0"
        >
          Caption
        </span>
      </FlexItem>
      <FlexItem
        flex="shrink"
      >
        <span
          className="emotion-1"
        >
          40%
        </span>
      </FlexItem>
    </Flex>
  </div>
  <svg
    className="emotion-4"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-3"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders with multiple segments of data 1`] = `
.emotion-0 {
  padding-bottom: 4px;
}

.emotion-3 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-1 {
  fill: green;
}

.emotion-2 {
  fill: yellow;
}

<Fragment>
  <div
    className="emotion-0"
    data-cy="progressBar-text"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </div>
  <svg
    className="emotion-3"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-1"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
    <rect
      className="emotion-2"
      height="100%"
      key="pbSegment-1"
      width="20%"
      x="40%"
    />
  </svg>
</Fragment>
`;

exports[`ProgressBar renders with one segment of data 1`] = `
.emotion-0 {
  padding-bottom: 4px;
}

.emotion-2 {
  background-color: rgba(218,221,226,0.65);
  border-radius: 999px;
  display: block;
  height: 6px;
  width: 100%;
}

.emotion-1 {
  fill: var(--themeBrandPrimary,#7D58FF);
}

<Fragment>
  <div
    className="emotion-0"
    data-cy="progressBar-text"
  >
    <Flex
      align="center"
      direction="row"
      gutterSize="s"
      justify="flex-end"
      wrap="nowrap"
    />
  </div>
  <svg
    className="emotion-2"
    data-cy="progressBar-chart"
  >
    <rect
      className="emotion-1"
      height="100%"
      key="pbSegment-0"
      width="40%"
      x="0%"
    />
  </svg>
</Fragment>
`;
